src/objects/Invoice_Recipient__c.object
<CustomObject>
    <description>Used to store the details of the email that is being sent to Finance Contact</description>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_sent_Date__c</fullName>
        <label>Email sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finance_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invoice_Receipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_and_Contact_Id__c</fullName>
        <label>Invoice and Contact Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Invoice Recipient</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Invoice Email Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>